[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fridge.gd" type="Script" id=1]
[ext_resource path="res://fridge.png" type="Texture" id=2]
[ext_resource path="res://items/hot_sauce.png" type="Texture" id=3]
[ext_resource path="res://GoBackButton.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.2205, 53.5082 )

[node name="Fridge" type="Node2D"]
script = ExtResource( 1 )

[node name="fridge_background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 2, 1.5 )
texture = ExtResource( 2 )

[node name="hotSauce" type="Sprite" parent="."]
position = Vector2( 652.75, 322 )
scale = Vector2( 2.33673, 1.90625 )
texture = ExtResource( 3 )

[node name="hotSauceArea" type="Area2D" parent="hotSauce"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hotSauce/hotSauceArea"]
position = Vector2( 0, 9.44263 )
shape = SubResource( 1 )

[node name="GoBackButton" parent="." instance=ExtResource( 4 )]
margin_left = 900.718
margin_top = 552.746
margin_right = 1140.72
margin_bottom = 600.746
nextScene = "res://House_inside.tscn"
[connection signal="area_entered" from="hotSauce/hotSauceArea" to="." method="_on_Area2D_area_entered"]
[connection signal="pressed" from="GoBackButton" to="." method="_on_GoBackButton_pressed"]
